--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,9 +5,11 @@
   <title>MecanixPro - Sistema de Gestión de Taller Mecánico</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="alternate icon" type="image/x-icon" href="favicon.ico">
   <meta name="description" content="Sistema integral de gestión para talleres mecánicos">
   <meta name="keywords" content="taller mecánico, gestión, reparaciones, vehículos, clientes">
+  <meta name="theme-color" content="#3b82f6">
 </head>
 <body>
   <app-root></app-root>
